--- a/eshop.html
+++ b/eshop.html
@@ -140,34 +140,11 @@
     <script src="script.js"></script>
     <!-- Footer -->
   <!-- Footer Section -->
-<footer>
-    <div class="container">
-        <div class="row" style="display: flex;">
-            <div class="col-md-4">
-                <h3>About Us</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula augue id elit vehicula.</p>
-            </div>
-            <div class="col-md-4">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h3>Follow Us</h3>
-                <ul class="social-icons">
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+  <footer>
+    <p style="color: #fff">
+      &copy; 2023 Your E-Commerce. All rights reserved.
+    </p>
+  </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
